added more to about me

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div>
             <h1>James Gates Developer Portfloio</h1>
             <h2>About Me</h2>
-            <h4>My name is James Gates and I am an aspiring programmer/game developer from Woodlyn, Pennsylvania.<br><br>  I have always liked playing video games all my life and the older I got the more interested I became in learning how they were made.<br><br>  Some of my favorite game series include Doom, Resident Evil, and the Yakuza/Like A Dragon games.<br><br> I'm currently looking for a job.</h4>
+            <h4>My name is James Gates and I am an aspiring programmer/game developer from Woodlyn, Pennsylvania.<br><br>  I have always liked playing video games all my life and the older I got the more interested I became in learning how they were made.<br><br>  Some of my favorite game series include Doom, Resident Evil, and the Yakuza/Like A Dragon games.<br><br> In my free time I have been learning many different game engines like unity and unreal engine for 2 years. <br><br> I'm currently looking for a job.</h4>
             <p></p>
         </div>
         <div class="footer">
