Added unreal engine game

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,10 @@
       </div>
       <h3>Video Games</h3>
       <div class="assignment-item">
-        <p><a href="https://jg2815.itch.io/the-last-survivor" target="_blank">Top Down Shooter (Prototype)</a></p>
+        <p><a href="https://jg2815.itch.io/the-last-survivor" target="_blank">Top Down Shooter in unity (Prototype)</a></p>
+      </div>
+      <div class="assignment-item">
+        <p><a href="https://jg2815.itch.io/infected" target="_blank">First Person Shooter in unreal engine (Prototype)</a></p>
       </div>
     </div>
   </div>
