added card deck manager and other small changes

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
         <div class="icons">
             <a href="http://discordapp.com/users/423104729774555137" target="_blank"><img src="images/discord.png" alt="Discord"></a>
             <a href="mailto:jamesgates638@gmail.com" target="_blank"><img src="images/gmail.png" alt="Gmail"></a>
-            <a href="https://github.com/JamesGates4623" target="_blank"><img src="images/github.png" alt="GitHub"></a>
+            <a href="https://github.com/JG2815" target="_blank"><img src="images/github.png" alt="GitHub"></a>
         </div>
     </div>
 
