--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
     <h1>Portfolio</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div id="img-div">
-        <h3>HTML Websites</h3>
+        <h3>Websites</h3>
       <div class="assignment-item">
         <p><a href="chapter04/analyze04.html" target="_blank">Correcting CSS Style Rules</a></p>
       </div>
@@ -112,6 +112,9 @@
       <div class="assignment-item">
         <p><a href="chapter11/index.html" target="_blank">Improving SEO for a Webpage</a></p>
       </div>
+      <div class="assignment-item">
+        <p><a href="https://github.com/JG2815/Card-Deck-Manager" target="_blank">Card Deck Manager</a></p>
+      </div>
       <h3>Video Games</h3>
       <div class="assignment-item">
         <p><a href="https://jg2815.itch.io/the-last-survivor" target="_blank">Top Down Shooter in unity (Prototype)</a></p>
@@ -123,7 +126,7 @@
   </div>
 
   <div class="footer">
-    <p>&copy; Copyright 2024 James Gates</p>
+    <p></p>
   </div>
 </body>
 </html>
