added another project

--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,8 @@
       <div class="assignment-item">
         <p><a href="https://jg2815.itch.io/infected" target="_blank">First Person Shooter in unreal engine (Prototype)</a></p>
       </div>
+      <div class="assignment-item">
+        <p><a href="https://github.com/ShinKaijuDev/Kaiju-Game" target="_blank"> Kajiu virtual pet game (Work in Progress)</a></p>
     </div>
   </div>
 
