--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
         <p><a href="https://jg2815.itch.io/infected" target="_blank">First Person Shooter in unreal engine (Prototype)</a></p>
       </div>
       <div class="assignment-item">
-        <p><a href="https://github.com/ShinKaijuDev/Kaiju-Game" target="_blank"> Kajiu virtual pet game (Work in Progress)</a></p>
+        <p><a href="Kaiju-Game.zip" target="_blank"> Kajiu Virtual Pet Game Prototype (Programmer's Contribution)</a></p>
     </div>
   </div>
 
