--- a/index.html
+++ b/index.html
@@ -1,152 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="is2JSAEcI4jKKoiPjAXF9xKLSnxUdDz5GoUU_3Kk3L4" />
-    <title>Home Screen</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/icon" href="images/favicon.ico">
-  <link rel="icon" type="image/png" href="images/android-chrome-192x192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="manifest" href="images/site.webmanifest">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <style>
-        body {
-            background-color: #1e2124;
-            text-align: center;
-            font-family: 'Roboto', sans-serif;
-            color: #ffffff;
-            margin: 0;
-            padding: 0;
-        }
-        .navbar {
-            background-color: #333;
-            overflow: hidden;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-        }
-        .navbar a {
-            color: #f2f2f2;
-            text-align: center;
-            padding: 10px 15px;
-            text-decoration: none;
-            display: inline-block;
-            margin: 0 5px;
-        }
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-        .hero {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            padding: 0 20px;
-        }
-        .hero h1 {
-            font-size: 60px;
-        }
-        .content {
-            padding: 20px;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .footer {
-            background-color: #333;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        a {
-            color: #ffffff;
-        }
-        .assignment-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .assignment-item {
-            flex: 1 0 calc(33.33% - 20px);
-        }
-        #image {
-            width: 20%;
-            height: 20%;
-            border-radius: 50%;
-            border-style: solid;
-        }
-        /* Mobile viewport */
-        @media only screen and (max-width: 600px) {
-            body {
-                font-size: 14px;
-            }
-            .container {
-                width: 100%;
-            }
-        }
-        /* Media query for tablet layout */ 
-        @media only screen and (min-width: 600px) {
-            form {
-                width: 80%;
-                margin: 0 auto;
-            }
-            .grid {
-                display: grid;
-                grid-template-columns: auto auto;
-                grid-gap: 20px;
-            }
-            .btn {
-                grid-column: 1/span 2;
-                padding: 3%;
-            }
-        }
-        /* Desktop viewport */
-        @media only screen and (min-width: 1024px) {
-            body {
-                font-size: 16px;
-            }
-            .container {
-                width: 960px;
-                margin: 0 auto;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="is2JSAEcI4jKKoiPjAXF9xKLSnxUdDz5GoUU_3Kk3L4" />
+  <title>Home Screen</title>
+
+  <!-- Fonts and Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #121212;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+
+    /* Particle background */
+    #tsparticles {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .container {
+      position: relative;
+      padding: 50px;
+      z-index: 1;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      background-color: transparent;
+      color: #ffffff;
+      font-family: 'Roboto', sans-serif;
+      text-align: center;
+    }
+
+    .wrapper {
+      flex: 1;
+      padding-top: 60px;
+    }
+
+    a {
+      color: #ffffff;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #66ccff;
+    }
+
+    .navbar {
+      background-color: #333;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .navbar a {
+      color: #f2f2f2;
+      padding: 10px 15px;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: #000;
+      border-radius: 4px;
+    }
+
+    .hero {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      padding: 20px;
+      flex-direction: column;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero h2 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    .hero h4 {
+      font-size: 18px;
+      max-width: 800px;
+      margin: 0 auto;
+      line-height: 1.6;
+      font-weight: normal;
+    }
+
+    .footer {
+      background-color: #333;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 15px 0;
+      width: 100%;
+    }
+
+    #image {
+      width: 20%;
+      border-radius: 50%;
+      border: 3px solid #ffffff;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        font-size: 14px;
+      }
+
+      .hero h1 {
+        font-size: 32px;
+      }
+
+      .hero h2 {
+        font-size: 24px;
+      }
+
+      .hero h4 {
+        font-size: 16px;
+        padding: 0 10px;
+      }
+
+      #image {
+        width: 50%;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="portfolio.html">Portfloio</a>
-        <a href="contact.html">Contact Me</a>
-        <a href="James Gates - Resume - 2025.pdf">Resume</a>
-    </div>
+  <!-- Particle Background -->
+  <div id="tsparticles"></div>
 
+  <!-- Navbar -->
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="contact.html">Contact Me</a>
+    <a href="James Gates - Resume - 2025.pdf">Resume</a>
+  </div>
+
+  <!-- Wrapper for content -->
+  <div class="wrapper">
     <div class="hero">
-        <div>
-            <h1>James Gates Developer Portfloio</h1>
-            <h2>About Me</h2>
-            <h4>My name is James Gates and I am an aspiring programmer/game developer from Woodlyn, Pennsylvania.<br><br>  I have always liked playing video games all my life and the older I got the more interested I became in learning how they were made.<br><br>  Some of my favorite game series include Doom, Resident Evil, and the Yakuza/Like A Dragon games.<br><br> In my free time I have been learning many different game engines like unity and unreal engine for 2 years. <br><br> I'm currently looking for a job.</h4>
-            <p></p>
-        </div>
-        <div class="footer">
-            <p>&copy; Copyright 2024 James Gates</p>
-          </div>
+      <h1>James Gates Developer Portfolio</h1>
+      <h2>About Me</h2>
+      <h4>
+        My name is James Gates and I am an aspiring programmer/game developer from Woodlyn, Pennsylvania.<br><br>
+        I have always liked playing video games all my life, and the older I got, the more interested I became in learning how they were made.<br><br>
+        Some of my favorite game series include Doom, Resident Evil, and the Yakuza/Like A Dragon games.<br><br>
+        In my free time, I have been learning many different game engines like Unity and Unreal Engine for the past 3 years.<br><br>
+        I'm currently looking for a job.
+      </h4>
+    </div>
+  </div>
 
+  <!-- Footer -->
+  <div class="footer">
+    <p>&copy; 2024 James Gates</p>
+  </div>
+
+   <!-- tsParticles script -->
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
+  <script>
+    tsParticles.load("tsparticles", {
+      background: {
+        color: {
+          value: "#121212"
+        }
+      },
+      fpsLimit: 60,
+      interactivity: {
+        events: {
+          onHover: {
+            enable: true,
+            mode: "repulse"
+          },
+          resize: true
+        },
+        modes: {
+          repulse: {
+            distance: 100,
+            duration: 0.4
+          }
+        }
+      },
+      particles: {
+        color: {
+          value: "#ffffff"
+        },
+        links: {
+          enable: false
+        },
+        collisions: {
+          enable: false
+        },
+        move: {
+          direction: "none",
+          enable: true,
+          outModes: {
+            default: "bounce"
+          },
+          random: true,
+          speed: 0.5,
+          straight: false
+        },
+        number: {
+          density: {
+            enable: true,
+            area: 800
+          },
+          value: 80
+        },
+        opacity: {
+          value: 0.5
+        },
+        shape: {
+          type: "circle"
+        },
+        size: {
+          value: { min: 1, max: 3 }
+        }
+      },
+      detectRetina: true
+    });
+  </script>
 </body>
 </html>
