--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,14 @@
       flex-direction: column;
     }
 
+    /* Particle background */
+    #tsparticles {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
     .navbar {
       background-color: #333;
       padding: 10px 20px;
@@ -83,7 +91,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="contact.html">Contact Me</a>
-    <a href="James Gates - Resume - 2024.pdf">Resume</a>
+    <a href="James Gates - Resume - 2025.pdf">Resume</a>
   </div>
 
   <div class="centered-container">
@@ -130,5 +138,70 @@
   <div class="footer">
     <p></p>
   </div>
+<!-- tsParticles script -->
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
+  <script>
+    tsParticles.load("tsparticles", {
+      background: {
+        color: {
+          value: "#121212"
+        }
+      },
+      fpsLimit: 60,
+      interactivity: {
+        events: {
+          onHover: {
+            enable: true,
+            mode: "repulse"
+          },
+          resize: true
+        },
+        modes: {
+          repulse: {
+            distance: 100,
+            duration: 0.4
+          }
+        }
+      },
+      particles: {
+        color: {
+          value: "#ffffff"
+        },
+        links: {
+          enable: false
+        },
+        collisions: {
+          enable: false
+        },
+        move: {
+          direction: "none",
+          enable: true,
+          outModes: {
+            default: "bounce"
+          },
+          random: true,
+          speed: 0.5,
+          straight: false
+        },
+        number: {
+          density: {
+            enable: true,
+            area: 800
+          },
+          value: 80
+        },
+        opacity: {
+          value: 0.5
+        },
+        shape: {
+          type: "circle"
+        },
+        size: {
+          value: { min: 1, max: 3 }
+        }
+      },
+      detectRetina: true
+    });
+  </script>
 </body>
 </html>
