added AI chat bot

--- a/portfolio.html
+++ b/portfolio.html
@@ -122,6 +122,8 @@
       </div>
       <div class="assignment-item">
         <p><a href="https://github.com/JG2815/Card-Deck-Manager" target="_blank">Card Deck Manager</a></p>
+      <div class="assignment-item">
+        <p><a href="https://ai-chat-bot-ruhh.onrender.com/" target="_blank">AI chat bot</a></p>
       </div>
       <h3>Video Games</h3>
       <div class="assignment-item">
