Put new resume in and fixed other small problems

--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
             background-color: #333;
             color: #f2f2f2;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px 0;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -113,7 +113,7 @@
             <a href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact Me</a>
-            <a href="James Gates - Resume - 2025.pdf">Resume</a>
+            <a href="JamesGatesResume2026.pdf">Resume</a>
         </div>
     </div>
 
@@ -127,7 +127,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; Copyright 2024 James Gates</p>
+        <p>&copy; 2026 Copyright James Gates</p>
     </div>
 <!-- tsParticles script -->
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
