--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="contact.html">Contact Me</a>
-    <a href="James Gates - Resume - 2025.pdf">Resume</a>
+    <a href="JamesGatesResume2026.pdf">Resume</a>
   </div>
 
   <!-- Wrapper for content -->
@@ -180,7 +180,7 @@
 
   <!-- Footer -->
   <div class="footer">
-    <p>&copy; 2024 James Gates</p>
+    <p>&copy; 2026 Copyright James Gates</p>
   </div>
 
    <!-- tsParticles script -->
