--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,17 @@
   <link href="style.css" rel="stylesheet" type="text/css">
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      height: 100vh; /* Full height of the viewport */
-      display: flex;
-      flex-direction: column;
+       background-color: #1e2124;
+            text-align: center;
+            font-family: 'Roboto', sans-serif;
+            color: #ffffff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
     }
 
     /* Particle background */
@@ -70,19 +76,39 @@
     }
 
     .footer {
-            background-color: #333;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
+      background-color: #333;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 15px 0;       /* same as index.html */
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;           /* match full width like index */
+      z-index: 1000;         /* keep above content */
+      font-size: 16px;       /* match site body size */
+      line-height: 1.4;
+    }
 
     .assignment-item {
       text-align: center;
       margin: 10px 0;
     }
+    /* Mobile viewport */
+        @media only screen and (max-width: 600px) {
+            body {
+                font-size: 14px;
+            }
+            .icons a img {
+                width: 80px;
+                height: 80px;
+            }
+        }
+        /* Desktop viewport */
+        @media only screen and (min-width: 1024px) {
+            body {
+                font-size: 16px;
+            }
+        }
   </style>
 </head>
 
@@ -91,7 +117,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="contact.html">Contact Me</a>
-    <a href="James Gates - Resume - 2025.pdf">Resume</a>
+    <a href="JamesGatesResume2026.pdf">Resume</a>
   </div>
 
   <div class="centered-container">
@@ -139,7 +165,7 @@
   </div>
 
   <div class="footer">
-    <p></p>
+    <p>&copy; 2026 Copyright James Gates</p>
   </div>
 <!-- tsParticles script -->
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
